<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Colombia Turística</string>
    <string name="ciudad">Bogotá</string>
    <string name="reseña">La ciudad de Bogotá es la capital de la República de Colombia y el principal destino turístico del país, pues cuenta con diversas actividades y acervos culturales, es sede de importantes universidades, y acoge eventos de nivel internacional.</string>
   <string name="bares">BARES</string>
    <string name="hoteles">HOTELES</string>
    <string name="turismo">TURISMO</string>
    <string name="demografica">INFO DEMOGRÁFICA</string>
    <string name="candelario">CANDELARIO BAR: Cra. 5 # 13-14</string>
    <string name="hardrock">HARD ROCK: Calle 81 # 13-05</string>
    <string name="thepub">THE PUB: carrera 3 # 12-37</string>
    <string name="volver">VOLVER</string>
    <string name="acercade">Acerca de...</string>
    <string name="acerca">Aplicación desarrollada por Daniel Ortiz Agudelo, estudiante de Ingeniería de telecomunicaciones UdeA Ude@ ABRIL 2016. Gráfica población Bogotá: Frank Ballesteros - DANE (Departamento Nacional de Estadística).</string>
    <string name="demografia">INFORMACIÓN DEMOGRÁFICA: Bogotá D.C. es la ciudad capital de Colombia, y actualmente es la ciudad más poblada del país con 7.363.782 habitantes para 2005, de acuerdo con las proyecciones de los resultados del censo nacional de 2005. Fue fundada en 1538 Por Gonzalo Jiménez de Quesada.</string>
    <string name="hotelWindsor">HOTEL WINDSOR: Cl. 95 #9-97.</string>
    <string name="hotelOpera">HOTEL OPERA: Calle 10 No. 5-72</string>
    <string name="hotelnh">HOTEL NH:  Cl. 93b #18-42</string>
    <string name="planetario">PLANETARIO DE BOGOTÁ: Cl. 26 #5-93 </string>
    <string name="monserrate">CERRRO DE MONSERRATE: Carrera 2 E No. 21-48 </string>
    <string name="maloka">MALOKA: Cra. 68 D No 24A-51</string>


    
    
    
    
</resources>