<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.danielortizagudelo.colombiat.MainActivity">



    <TextView
        style="@style/textViewStyle.grande"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ciudad"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/bogota"/>
        <TextView
            style="@style/textViewStyle.s"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reseña"
            />

        <Button
            android:id="@+id/bares"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bares"
            android:textColor="@color/darkorange"/>

        <Button
            android:id="@+id/hoteles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hoteles"
            android:textColor="@color/darkorange"/>
    <Button
        android:id="@+id/turismo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/turismo"
        android:textColor="@color/darkorange"/>
    <Button
        android:id="@+id/demografica"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/demografica"
        android:textColor="@color/darkorange"
        />







</LinearLayout>
