<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.danielortizagudelo.colombiat.bares">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_vertical">
    <TextView
        style="@style/textViewStyle.s"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hardrock"/>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/hard_rock"
        />

    <TextView
        style="@style/textViewStyle.s"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/candelario"/>
    <ImageView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/candelariobar"
        />

        <TextView
            style="@style/textViewStyle.s"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/thepub"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/irishpub"/>
        <Button
            android:id="@+id/volver1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/volver"
            android:textColor="@color/darkorange"/>



    </LinearLayout>


</LinearLayout>
